; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_mpegts.c_set_pmt_found.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_mpegts.c_set_pmt_found.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Program = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @set_pmt_found to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_pmt_found(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.Program*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call %struct.Program* @get_program(i32* %6, i32 %7)
  store %struct.Program* %8, %struct.Program** %5, align 8
  %9 = load %struct.Program*, %struct.Program** %5, align 8
  %10 = icmp ne %struct.Program* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  br label %15

12:                                               ; preds = %2
  %13 = load %struct.Program*, %struct.Program** %5, align 8
  %14 = getelementptr inbounds %struct.Program, %struct.Program* %13, i32 0, i32 0
  store i32 1, i32* %14, align 4
  br label %15

15:                                               ; preds = %12, %11
  ret void
}

declare dso_local %struct.Program* @get_program(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
